2005-06-10  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Provide font-backend-specific macros for
	FONT_FAMILY_DEFAULT. Change CAIRO_FT_FONT_FAMILY_DEFAULT from
	"serif" to "" to allow the actual default to come from the
	system/user configuration.

2005-06-10  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Pull the enum out from inside cairo_path_data_t and
	give it a name of cairo_path_data_type_t. This allows C++ programs
	to see the enum values. It also allows variables to be declared of
	this type for manually constructing a cairo_path_t.

2005-06-10  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add 'consistent error handling' to 1.0 roadmap. (This
	isn't new, we just forgot to list it here before).

	* TODO: Big cleanup to remove finished items. Also, split the file
	up to separate TODO items that affect the API from items that do
	not.

2005-06-10  Carl Worth  <cworth@cworth.org>

	Originally: 2005-06-09  Carl Worth  <cworth@cworth.org>

	* src/cairo-pdf-surface.c: (_cairo_pdf_surface_show_page):
	* src/cairo-xcb-surface.c:
	(_cairo_xcb_surface_acquire_source_image),
	(_cairo_xcb_surface_acquire_dest_image):
	* src/cairo-xlib-surface.c:
	(_cairo_xlib_surface_acquire_source_image),
	(_cairo_xlib_surface_acquire_dest_image): Rework occurrences
	of 'if (status == CAIRO_STATUS_SUCCESS)' to use 'if (status)'
	instead where trivial.

2005-06-10  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-font.c:
	* src/cairo-ft-font.c:
	* src/cairo-glitz-surface.c:
	* src/cairo-gstate.c:
	* src/cairo-image-surface.c:
	* src/cairo-pattern.c:
	* src/cairo-pdf-surface.c:
	* src/cairo-png.c:
	* src/cairo-surface.c:
	* src/cairo-win32-font.c:
	* src/cairo-win32-surface.c:
	* src/cairo-xcb-surface.c:
	* src/cairo-xlib-surface.c: Remove STATUS_OK macro which was not
	being used universally.

2005-06-09  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Remove trailing comma from enum values which gcc
	4.0 does not want to see (Luis Villa). Closes bug #3502.
